[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/screens/training_animation_screen.gd" id="1"]
[ext_resource type="Theme" path="res://ui/theme/game_theme.tres" id="2"]

[node name="TrainingAnimationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.035, 0.035, 0.043, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeaderBar" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HeaderSpacer" type="Control" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.024, 0.714, 0.831, 1)
theme_override_font_sizes/font_size = 24
text = "Training..."
horizontal_alignment = 1

[node name="HeaderSpacer2" type="Control" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="TopSpacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpriteCenterContainer" type="CenterContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="SpriteRect" type="TextureRect" parent="MarginContainer/VBox/SpriteCenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(256, 256)
expand_mode = 1
stretch_mode = 5

[node name="StepContainer" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 32

[node name="StepLabel1" type="Label" parent="MarginContainer/VBox/StepContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "..."

[node name="StepLabel2" type="Label" parent="MarginContainer/VBox/StepContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "..."

[node name="StepLabel3" type="Label" parent="MarginContainer/VBox/StepContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "..."

[node name="BottomSpacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.024, 0.714, 0.831, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
text = ""

[node name="ResultDoneSpacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 16)

[node name="DoneButton" type="Button" parent="MarginContainer/VBox"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(120, 36)
size_flags_horizontal = 4
text = "Done!"
